--- a/web-client/src/styles/globals.css
+++ b/web-client/src/styles/globals.css
@@ -1,8 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-body {
-    margin: 0;
-    padding: 0;
-}
+/*body {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*}*/
